<resources>
    <string name="app_name">GrappleMore</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="user_name">Email Address:</string>
    <string name="password">Password:</string>
    <string name="enter_first_name">Enter first Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_user_name">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="placeholder_s_user_profile">Placeholder\'s User Profile</string>
    <string name="signup">Create Account</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_input_a_username">Username: </string>
    <string name="username"> enter username </string>
    <string name="select_a_profile_picture">Select a profile picture</string>
    <string name="green_check">green check</string>
    <string name="select_belt_colour">Select belt colour: </string>
    <string name="academy">Academy: </string>
    <string name="enter_academy_here">enter academy </string>
    <string name="editProfileBtn">Edit Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="belt_array">
        <item>White</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Brown</item>
        <item>Black</item>
    </string-array>
</resources>